<resources>
    <string name="app_name">卡片天气</string>
    <string name="locating">正在获取</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>

    <!-- 周 -->

    <string name="dayOfWeek0">周日</string>
    <string name="dayOfWeek1">周一</string>
    <string name="dayOfWeek2">周二</string>
    <string name="dayOfWeek3">周三</string>
    <string name="dayOfWeek4">周四</string>
    <string name="dayOfWeek5">周五</string>
    <string name="dayOfWeek6">周六</string>

    <!-- 天气 -->

    <string name="CLEAR_DAY">晴</string>
    <string name="CLEAR_NIGHT">晴</string>
    <string name="PARTLY_CLOUDY_DAY">多云</string>
    <string name="PARTLY_CLOUDY_NIGHT">多云</string>
    <string name="CLOUDY">阴</string>
    <string name="LIGHT_HAZE">轻度雾霾</string>
    <string name="MODERATE_HAZE">中度雾霾</string>
    <string name="HEAVY_HAZE">重度雾霾</string>
    <string name="LIGHT_RAIN">小雨</string>
    <string name="MODERATE_RAIN">中雨</string>
    <string name="HEAVY_RAIN">大雨</string>
    <string name="STORM_RAIN">暴雨</string>
    <string name="FOG">雾</string>
    <string name="LIGHT_SNOW">小雪</string>
    <string name="MODERATE_SNOW">中雪</string>
    <string name="HEAVY_SNOW">大雪</string>
    <string name="STORM_SNOW">暴雪</string>
    <string name="DUST">浮尘</string>
    <string name="SAND">沙尘</string>
    <string name="WIND">大风</string>

    <!-- 风力风向 -->

    <string name="WDnull">风向未知</string>
    <string name="WDen">东北风</string>
    <string name="WDe">东风</string>
    <string name="WDes">东南风</string>
    <string name="WDs">南风</string>
    <string name="WDws">西南风</string>
    <string name="WDw">西风</string>
    <string name="WDwn">西北风</string>
    <string name="WDn">北风</string>

    <string name="WS99">未知风强</string>
    <string name="WS0">无风</string>
    <string name="WS1">一级</string>
    <string name="WS2">二级</string>
    <string name="WS3">三级</string>
    <string name="WS4">四级</string>
    <string name="WS5">五级</string>
    <string name="WS6">六级</string>
    <string name="WS7">七级</string>
    <string name="WS8">八级</string>
    <string name="WS9">九级</string>
    <string name="WS10">十级</string>
    <string name="WS11">十一级</string>
    <string name="WS12">十二级</string>
    <string name="WS13">十三级</string>
    <string name="WS14">十四级</string>
    <string name="WS15">十五级</string>
    <string name="WS16">十六级</string>
    <string name="WS17">十七级</string>

    <string name="WSDesc1">微风徐徐</string>
    <string name="WSDesc2">清风</string>
    <string name="WSDesc3">树叶摇摆</string>
    <string name="WSDesc4">树枝摇动</string>
    <string name="WSDesc5">风力强劲</string>
    <string name="WSDesc6">风力强劲</string>
    <string name="WSDesc7">风力超强</string>
    <string name="WSDesc8">狂风大作</string>
    <string name="WSDesc9">狂风呼啸</string>
    <string name="WSDesc10">暴风毁树</string>
    <string name="WSDesc11">暴风毁树</string>
    <string name="WSDesc12">飓风</string>
    <string name="WSDesc13">台风</string>
    <string name="WSDesc14">强台风</string>
    <string name="WSDesc15">强台风</string>
    <string name="WSDesc16">超强台风</string>
    <string name="WSDesc17">超强台风</string>

    <!-- 预警名称 -->

    <string name="EWN01">台风</string>
    <string name="EWN02">暴雨</string>
    <string name="EWN03">暴雪</string>
    <string name="EWN04">寒潮</string>
    <string name="EWN05">大风</string>
    <string name="EWN06">沙尘暴</string>
    <string name="EWN07">高温</string>
    <string name="EWN08">干旱</string>
    <string name="EWN09">雷电</string>
    <string name="EWN10">冰雹</string>
    <string name="EWN11">霜冻</string>
    <string name="EWN12">大雾</string>
    <string name="EWN13">霾</string>
    <string name="EWN14">道路结冰</string>
    <string name="EWN15">森林火险</string>
    <string name="EWN16">雷雨大风</string>
    <string name="EWN17">春季沙尘</string>
    <string name="EWN18">沙尘</string>

    <!-- 预警等级 -->

    <string name="EWG00">白色</string>
    <string name="EWG01">蓝色</string>
    <string name="EWG02">黄色</string>
    <string name="EWG03">橙色</string>
    <string name="EWG04">红色</string>


    <string name="centigrade">℃</string>
    <string name="update">更新</string>

    <string name="getting"> </string>

    <string name="AQI">空气指数</string>
    <string name="excellent">优</string>
    <string name="great">良</string>
    <string name="mild">轻</string>
    <string name="moderate">中</string>
    <string name="heavy">重</string>
    <string name="severe">严</string>

    <string name="precipitation_forecast">降水预测</string>
    <string name="air_quality">空气质量</string>
    <string name="hour_forecast">小时预测</string>
    <string name="PM25">小于2.5微米\n颗粒物</string>
    <string name="concentration">浓度</string>
    <string name="iaqi">IAQI</string>
    <string name="PM10">小于10微米\n颗粒物</string>
    <string name="SO2">二氧化硫</string>
    <string name="NO2">二氧化氮</string>
    <string name="O3">臭氧</string>
    <string name="CO">一氧化氮</string>
    <string name="daily_forecast">每日预测</string>
    <string name="add_city">添加城市</string>

    <string name="longitude">经度 in Double</string>
    <string name="latitude">纬度 in Double</string>
    <string name="back">返回</string>
    <string name="search">搜索</string>
    <string name="city_name">城市名</string>
    <string name="yesterday_weather">昨日天气</string>
    <string name="win_info">风力信息</string>
    <string name="other_details">其他信息</string>
    <string name="alert_info">预警信息</string>
    <string name="no_alert">暂无预警</string>
    <string name="no_alert_desc">享受生活吧</string>
    <string name="sun_rise_and_fall">日起日落</string>
    <string name="real_time">实时：</string>
    <string name="edit_cards">编辑卡片</string>
    <string name="my_cities">城市列表</string>

</resources>