<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/manage_ib_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginVertical="12dp"
            android:background="@color/translation"
            android:contentDescription="@string/back"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/icon_back" />

        <ImageButton
            android:id="@+id/manage_ib_add"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginVertical="12dp"
            android:background="@color/translation"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/add_city" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_cities"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpUsage" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/manage_first_card"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/manageitem_ib_favorite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/icon_star"
                android:scaleType="centerCrop"
                android:background="@color/translation"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/manageitem_tv_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="本地城市"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/manageitem_ib_favorite"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/manageitem_iv_drag"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_lock"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="12dp"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/manage_rv_cards"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>